--- a/KLS_WEB/KLS_WEB/Views/Carriers/Operators/Index.cshtml
+++ b/KLS_WEB/KLS_WEB/Views/Carriers/Operators/Index.cshtml
@@ -5,11 +5,22 @@
 @{ int id = ViewBag.id; }
 <div class="data-content p-4 text-left">
     <div class="p-4">
-        <div class="text-left d-flex mb-3">
-            <a href="/Carriers/formCarriers/@id">
-                <div class="material-icons icon-red">arrow_back</div>
-            </a>
-            <div class="text-uppercase poppins medium size-24 pl-2">Operadores</div>
+        <div class="d-flex flex-nowrap">
+            <div class="p-2">
+                <div class="text-left d-flex p-2">
+                    <a href="/Carriers/formCarriers/@id">
+                        <div class="material-icons icon-red">arrow_back</div>
+                    </a>
+                    <div class="text-uppercase poppins medium size-24 pl-2">BIBLIOTECA DIGITAL</div>
+                </div>
+            </div>
+            <div class="ml-auto p-2">
+                <button class="btn btn-sm btn-secondary" onclick="showModal('AGREGAR','Agregar');">
+                    <span class="material-icons">
+                        add
+                    </span>
+                </button>
+            </div>
         </div>
 
         <div class="p-4 shadow bg-white">
@@ -35,3 +46,184 @@
 
     </div>
 </div>
+
+<!--Modal global-->
+<div class="modal fade" id="modalDiv" tabindex="-1" role="dialog" data-backdrop="static" data-keyboard="false" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-lg" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="titulo-modal"></h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body text-left">
+                <form id="frmRegister" action="#" method="post">
+                    <input type="hidden" name="id" id="idEditar" value="0" />
+                    <div class="row">
+                        <div class="col-md-4">
+                            <div class="form-group">
+                                <label class="">Nombre</label>
+                                <input type="text" class="form-control" name="nombre" id="nombre" />
+                            </div>
+                        </div>
+                        <div class="col-md-4">
+                            <div class="form-group">
+                                <label class="">Numero de teléfono</label>
+                                <input type="number" class="form-control" name="NoTelefono" id="NoTelefono"  />
+                            </div>
+                        </div>
+                        <div class="col-md-4">
+                            <div class="form-group">
+                                <label class="">Licencia</label>
+                                <input type="file" name="Licencia" id="Licencia" />
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-md-4">
+                            <div class="form-group">
+                                <label class=""># Licencia</label>
+                                <input type="text" class="form-control" name="NoLicencia" id="NoLicencia" />
+                            </div>
+                        </div>
+                        <div class="col-md-4">
+                            <div class="form-group">
+                                <label class="">INE</label>
+                                <input type="file" name="Ine" id="Ine" />
+                            </div>
+                        </div>
+                        
+                        <div class="col-md-4">
+                            <div class="form-group">
+                                <label class=""># INE</label>
+                                <input type="text" class="form-control" name="NoIne" id="NoIne" />
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-md-4">
+                            <div class="form-group">
+                                <label class="">Seguro Social</label>
+                                <input type="text" class="form-control" name="SeguroSocial" id="SeguroSocial" />
+                            </div>
+                        </div>
+                        <div class="col-md-4">
+                            <div class="form-group">
+                                <label class="">IMSS</label>
+                                <input type="text" class="form-control" name="Imss" id="Imss" />
+                            </div>
+                        </div>
+                        <div class="col-md-4">
+                            <label class="">Estatus</label>
+                            <select class="form-control form-control-sm" name="estatus" id="estatus">
+                                <option value="1">Activo</option>
+                                <option value="2">Inactivo</option>
+                            </select>
+                        </div>
+                    </div>
+
+                    <button type="submit" class="btn btn-dark guardar" style="width:20%;" id="btnAccion">
+                        Guardar
+                    </button>
+                </form>
+
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn" data-dismiss="modal">Cerrar</button>
+                @*<button type="button" class="btn btn-primary">Save changes</button>*@
+            </div>
+        </div>
+    </div>
+</div>
+<!--Modal global-->
+
+@section Scripts{
+    <script>
+        var dataOperators = [];
+        $(window).ready(function () {
+            loadTable();
+            $("#frmRegister").submit(function (event) {
+                event.preventDefault();
+                var jsonData = convertJson($("#frmRegister"));
+                jsonData["Id_Transportista"] = @id;
+                if (parseInt($("#idEditar").val()) == 0) {
+                    $.post("/Carriers/Operators/setOperators/", jsonData, function (res) {
+                        $("#idEditar").val(res.id);
+                        dToast("success", "Registro guardado exitosamente.", "Registrado");
+                    }).fail(function (error) {
+                        dToast("error", "Error al tratar de guardar el registro", "Error");
+                        $(".guardar").attr("disabled", false);
+                    });
+                } else {
+                    $.post("/Carriers/Operators/putOperators/", jsonData, function (res) {
+                        loadTable();
+                        dToast("success", "Registro actualizado exitosamente.", "Registrado");
+                    }).fail(function (error) {
+                        dToast("error", "Error al tratar de actualizar el registro", "Error");
+                        $(".guardar").attr("disabled", false);
+                    });
+                }
+            });
+        });
+
+        function showModal(titulo = "Title", accion, idEditar = 0) {
+            $('#frmRegister').trigger("reset");
+            $(".guardar").html(accion);
+            $("#titulo-modal").empty("");
+            $("#titulo-modal").html(titulo);
+            $("#idEditar").val(idEditar);
+            if (accion == "Editar") {
+                try {
+                    let indice = dataOperators.findIndex(service => service.id === idEditar);
+                    $("#nombre").val(dataOperators[indice].nombre);
+                    $("#NoTelefono").val(dataOperators[indice].noTelefono);
+                    $("#NoLicencia").val(dataOperators[indice].noLicencia);
+                    $("#NoIne").val(dataOperators[indice].noIne);
+                    $("#SeguroSocial").val(dataOperators[indice].seguroSocial);
+                    $("#Imss").val(dataOperators[indice].imss);
+                    $('#estatus option[value="' + dataOperators[indice].estatus + '"]').attr("selected", true);
+                    $("#modalDiv").modal("show");
+                } catch (error) {
+                    dToast("error", "Error al tratar de editar, intenta recargar la página.", "Error");
+                    $("#modalDiv").modal("hide");
+                }
+            } else {
+                $("#modalDiv").modal("show");
+            }
+        }
+
+        function loadTable() {
+            var stable = $('.table-viajes').DataTable();
+            stable.destroy();
+            $("#table-info").empty();
+            $.get("/Carriers/Operators/getOperators/", { "Id_Transportista":@id}, function (res) {
+                dataOperators = res;
+                $.each(dataOperators, function (item, key) {
+                    $("#table-info").append(`
+                             <tr>
+                                <td>${nCon(key.id)}</td>
+                                <td>${nCon(key.nombre)}</td>
+                                <td>${nCon(key.noTelefono)}</td>
+                                <td>${nCon(key.noLicencia)}</td>
+                                <td>--</td>
+                                <td>${nCon(key.noIne)}</td>
+                                <td>--</td>
+                                <td>${nCon(key.seguroSocial)}</td>
+                                <td>${nCon(key.imss)}</td>
+                                <td>`+ statusTable(key.estatus) + `</td>
+                                <td>
+                                    <a href="#">
+                                        <span class="material-icons" onclick="showModal('EDITAR','Editar',${nCon(key.id)});">
+                                            mode_edit
+                                        </span>
+                                    </a>
+                                </td>
+                            </tr>`);
+                });
+                dTable("table-viajes");
+            });
+        }
+
+    </script>
+}
