--- a/KLS_WEB/KLS_WEB/Views/Catalogs/ShippingCompanies/Index.cshtml
+++ b/KLS_WEB/KLS_WEB/Views/Catalogs/ShippingCompanies/Index.cshtml
@@ -25,6 +25,7 @@
         <table id="table" class="table table-striped table-bordered display table-hover table-viajes" width="100%">
             <thead>
                 <tr>
+                    <th>#</th>
                     <th>Nombre</th>
                     <th>Dirección</th>
                     <th>Teléfonos</th>
@@ -186,7 +187,8 @@
                 $.each(res, function (item, key) {
                     $("#table-info").append(`
                          <tr>
-                            <td>${nCon(key.nombre)}</td>
+                            <td>${nCon(key.id)}</td>
+                            <td>${key.nombre}</td>
                             <td>${nCon(key.direccion)}</td>
                             <td>${nCon(key.telefono)}</td>
                             <td>${nCon(key.departamento)}</td>
