--- a/KLS_WEB/KLS_WEB/Views/Shared/_Layout.cshtml
+++ b/KLS_WEB/KLS_WEB/Views/Shared/_Layout.cshtml
@@ -88,7 +88,7 @@
                             </li>
 
                             <li class="pt-2 pl-4">
-                                <a href="">
+                                <a href="/Clients">
                                     <div class="material-icons size-18 pr-1">person</div>
                                     <label>Clientes</label>
                                 </a>
@@ -149,8 +149,8 @@
     <script src="https://cdn.datatables.net/plug-ins/1.10.15/i18n/Spanish.json"></script>
     <script src="https://cdn.datatables.net/1.10.24/js/dataTables.bootstrap4.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
+    @RenderSection("Scripts", required: false)
     <script>
-
         $("#left_bar").click(function () {
             if ($("#left_bar").hasClass("expand")) {
                 $("#left_bar").removeClass("expand");
@@ -175,9 +175,6 @@
                 $("#left_bar").addClass("expand");
             }
         }
-
-      
-
 
         function dTable(table) {
             $('.' + table).DataTable({
@@ -254,15 +251,12 @@
         }
 
         function dSelect(select) {
-            $('#'+select).select2({
+            $('#' + select).select2({
                 language: {
-
                     noResults: function () {
-
                         return "No hay resultado";
                     },
                     searching: function () {
-
                         return "Buscando..";
                     }
                 }
@@ -270,6 +264,5 @@
         }
 
     </script>
-    @RenderSection("Scripts", required: false)
 </body>
 </html>
