--- a/KLS_WEB/KLS_WEB/Views/Travels/Details.cshtml
+++ b/KLS_WEB/KLS_WEB/Views/Travels/Details.cshtml
@@ -494,7 +494,7 @@
                 </div>
 
                 <div class="p-4 shadow bg-white">
-                    <table id="table" class="table table-striped table-bordered display table-hover table-viajes text-uppercase" width="100%">
+                    <table id="table" class="table table-striped table-bordered display table-hover table-facturas text-uppercase" width="100%">
                         <thead>
                             <tr>
                                 <th>Nombre</th>
@@ -748,8 +748,9 @@
                 $('#div-documentos').addClass('d-none');
                 $('#div-historial').addClass('d-none');
 
-                if (container.css('display') == 'none')
+                if (container.css('display') == 'none') {
                     $('#div-requisitos').removeClass('d-none');
+                }
                 else
                     $('#div-requisitos').addClass('d-none');
             });
@@ -771,6 +772,7 @@
             });
 
             $('#facturacion').on('click', function () {
+                var DataFacturas = [];
 
                 var container = $('#div-facturacion');
                 $('#div-servicios').addClass('d-none');
@@ -779,8 +781,47 @@
                 $('#div-mercancias').addClass('d-none');
                 $('#div-hostorial').addClass('d-none');
 
-                if (container.css('display') == 'none')
+                if (container.css('display') == 'none') {
                     $('#div-facturacion').removeClass('d-none');
+
+                    var stable = $('.table-facturas').DataTable();
+
+                    stable.destroy();
+                    $("#table-info").empty();
+
+                    $.get("Facturacion", function (res) {
+                        alert("mensaje");
+                        DataFacturas = resonse;
+                        console.log(response);
+                        //$.each(res, function (item, key) {
+                        //    $("#table-info").append(`
+                        //         <tr>
+                        //            <td>${nCon(key.nombre)}</td>
+                        //            <td>${nCon(key.telefono)}</td>
+                        //            <td>${nCon(key.departamento)}</td>
+                        //            <td>${nCon(key.contactos)}</td>
+                        //            <td>${nCon(key.correo)}</td>
+                        //            <td>`+ statusTable(key.estatus) + `</td>
+                        //            <td>${nCon(key.almacen)}</td>
+                        //            <td>
+                        //                <a href="#" onclick="showNota('${nCon(key.notas)}','NOTA');">
+                        //                    <h1>...</h1>
+                        //                </a>
+                        //            </td>
+                        //            <td>
+                        //                <a href="#">
+                        //                    <span class="material-icons" onclick="showModal('EDITAR','Editar',${nCon(key.id)});">
+                        //                        mode_edit
+                        //                    </span>
+                        //                </a>
+                        //            </td>
+                        //        </tr>`);
+                        //});
+                        //dTable("table-facturas");
+                    }).fail(function (error) {
+                        dToast("error", "Error al tratar de obtener los registros, intenta cerrar sesión y volver a iniciar.", "Error");
+                    });
+                }
                 else
                     $('#div-facturacion').addClass('d-none');
 
@@ -828,6 +869,7 @@
         $(".custom-file-input").on("change", function () {
             var fileName = $(this).val().split("\\").pop();
             $(this).siblings(".custom-file-label").addClass("selected").html(fileName);
-        });
+        });         
+
     </script>    
 }
