*Ruta modificada en Controller Facturación

--- a/KLS_WEB/KLS_WEB/Views/Travels/Details.cshtml
+++ b/KLS_WEB/KLS_WEB/Views/Travels/Details.cshtml
@@ -785,7 +785,7 @@
                     stable.destroy();
                     $("#table-info").empty();
 
-                    $.get("Facturacion", function (res) {
+                    $.get("/Facturacion", function (res) {
                         alert("mensaje");
                         DataFacturas = resonse;
                         console.log(response);
