--- a/KLS_WEB/KLS_WEB/Views/Travels/Details.cshtml
+++ b/KLS_WEB/KLS_WEB/Views/Travels/Details.cshtml
@@ -117,7 +117,7 @@
                         </div>
                     </a>
 
-                    <a href="#" class="catalog" id="facturacion">
+                    <a class="catalog" id="facturacion">
                         <div class="content">
                             <span class="material-icons">
                                 receipt_long
@@ -477,7 +477,7 @@
 <div class="data-content px-4 text-left d-none" id="div-facturacion">
     <div class="p-4">
         <div class="row">
-            <div class="col-md-6">
+            <div class="col-md-8">
                 <div class="text-left d-flex justify-content-between mb-3">
                     <h4>FACTURACIÓN</h4>
                     <div style="padding-left:20%;" onclick="selectServicios(this);">
@@ -637,6 +637,8 @@
 
 @section Scripts{
     <script>
+        var DataFacturas = [];
+
         $(document).ready(function () {
 
             $('#servicios').on('click', function () {
@@ -688,7 +690,6 @@
             });
 
             $('#facturacion').on('click', function () {
-                var DataFacturas = [];
 
                 var container = $('#div-facturacion');
                 $('#div-servicios').addClass('d-none');
@@ -707,28 +708,21 @@
 
                     $.get("/Facturacion/getFacturas", function (res) {
                         DataFacturas = res;
-                        console.log(res);
-
                         res.map(({ nombre, fechacarga, usuario, fullpath }) => {
                             $("#table-info").append(`
                                 <tr>
                                 <td>${nombre}</td>
                                 <td>${fechacarga}</td>
-                                <td>${usuario}</td>                                                                                      
-                                <td>
-                                    <a href="#">
-                                        <span class="material-icons" onclick="showModal('EDITAR','Editar',${fullpath});">
-                                            mode_edit
-                                        </span>
-                                    </a>
-                                    <a href="#">
-                                        <span class="material-icons" onclick="showModal('EDITAR','Editar',${fullpath});">
-                                            mode_edit
+                                <td>${usuario}</td>
+                                <td class="text-center">
+                                    <a onclick="downloadFile()" >
+                                        <span class="material-icons">
+                                            file_download
                                         </span>
                                     </a>
                                 </td>
                             </tr>`);
-                        });            
+                        });
                         dTable("table-facturas");
                     }).fail(function (error) {
                         dToast("error", "Error al tratar de obtener los registros, intenta cerrar sesión y volver a iniciar.", "Error");
@@ -776,12 +770,34 @@
             const elemento = jQuery(element);
             elemento.attr('disabled', true);
             $("#modalDiv").modal("show");
-        }       
+        }
         // Add the following code if you want the name of the file appear on select
         $(".custom-file-input").on("change", function () {
             var fileName = $(this).val().split("\\").pop();
             $(this).siblings(".custom-file-label").addClass("selected").html(fileName);
-        });         
+        });
 
+        function downloadFile() {
+            $.ajax({
+                type: 'GET',
+                url: '/Facturacion/downloadFile',
+                data: { fileName: "visual_Serial.txt", fullpath: "C:\\Users\\Consiss\\Documents\\Visual Studio 2019\\GitHubProjects\\KLS\\KLS_WEB\\KLS_WEB\\wwwroot\\Resources\\Facturas\\visual_Serial.txt" },
+                contentType: "application/json; charset=utf-8",
+                dataType: "json",                
+                success: function (Rdata) {
+                    alert("2");
+                    debugger;
+                    var bytes = new Uint8Array(Rdata.FileContents);
+                    var blob = new Blob([bytes], { type: "text/plain" });
+                    var link = document.createElement('a');
+                    link.href = window.URL.createObjectURL(blob);
+                    link.download = "visual_Serial.txt";
+                    link.click();
+                },
+                error: function (err) {
+                    console.log("error",err);
+                }            
+            });
+        }
     </script>    
 }
