--- a/KLS_WEB/KLS_WEB/Views/Carriers/Routes/Index.cshtml
+++ b/KLS_WEB/KLS_WEB/Views/Carriers/Routes/Index.cshtml
@@ -8,7 +8,7 @@
         <div class="d-flex flex-nowrap">
             <div class="p-2">
                 <div class="text-left d-flex p-2">
-                    <a href="/Catalogs">
+                    <a href="/Carriers/formCarriers/@id">
                         <div class="material-icons icon-red">arrow_back</div>
                     </a>
                     <div class="text-uppercase poppins medium size-24 pl-2">RUTA TRANSPORTISTA</div>
@@ -59,7 +59,8 @@
                         <div class="col-md-4">
                             <label class="">Ruta</label>
                             <select class="form-control form-control-sm">
-                                <option value="value">text</option>
+                                <option value="value">Ruta de prueba 1</option>
+                                <option value="value">Ruta de prueba 2</option>
                             </select>
                         </div>
                         <div class="col-md-4">
