--- a/KLS_WEB/KLS_WEB/Views/Catalogs/Catalogs/GeografiaViews.cshtml
+++ b/KLS_WEB/KLS_WEB/Views/Catalogs/Catalogs/GeografiaViews.cshtml
@@ -8,7 +8,7 @@
         <a href="/Catalogs" class="catalog">
             <div class="content">
                 <div class="material-icons icon-red">arrow_back</div>
-                <div class="name font-barlow">Regiones</div>
+                <div class="name font-barlow">Regresar</div>
             </div>
         </a>
 
