--- a/KLS_WEB/KLS_WEB/Views/Catalogs/Catalogs/Index.cshtml
+++ b/KLS_WEB/KLS_WEB/Views/Catalogs/Catalogs/Index.cshtml
@@ -56,7 +56,7 @@
 
         <a href="Catalogs/InternationalLand" class="catalog">
             <div class="content">
-                <img src="../img/shipping.svg" style="width: 60px; margin-bottom: 13px;">
+                <img src="../img/shipping.svg" class="name" style="width: 60px; margin-bottom: 13px;">
                 <div class="name font-barlow">Terrestres inter.</div>
             </div>
         </a>
