--- a/KLS_WEB/KLS_WEB/Views/Catalogs/State/Index.cshtml
+++ b/KLS_WEB/KLS_WEB/Views/Catalogs/State/Index.cshtml
@@ -55,7 +55,7 @@
                     <div class="row">
                         <div class="col-md-3">
                             <div class="form-group">
-                                <label class="">Pais</label><br />
+                                <label class="">País</label><br />
                                 <select class="form-control" name="id_pais" id="id_pais" style="width:100%;">
                                     <option value="0">Selecciona</option>
                                 </select>
