--- a/KLS_WEB/KLS_WEB/Views/Clients/formClients.cshtml
+++ b/KLS_WEB/KLS_WEB/Views/Clients/formClients.cshtml
@@ -175,7 +175,7 @@
                             <div class="name font-barlow">Contactos</div>
                         </div>
                     </a>
-                    <a href="/Clients/formClients/@id" class="catalog">
+                    <a href="/Clients/Requirements/@id" class="catalog">
                         <div class="content">
                             <span class="material-icons">
                                 heart
